# libff

./: .gitignore  CMakeLists.txt  Readme.md
doc/: ff.md
ff/: .cproject  .gitignore  .project  CMakeLists.txt
ff/include/: Common.h
ff/include/ff/: Application.h  Base64.h  Bind.h  BlockingList.h  Buffer.h  CRC.h  CliPacket.h  CliService.h  CmdLineParser.h  Curl.h  CycleBuffer.h  DataService.h  DateTime.h  Delayable.h  DllLoader.h  EPoll.h  Endian.h  ErrNo.h  Exception.h  File.h  FileAppender.h  FileLock.h  FileSystem.h  HexNumberFormater.h  IAppender.h  IP.h  List.h  Locker.h  Log.h  LogInfo.h  Logger.h  Logger_test.cpp  MD5.h  MessageBus.h  NamedPipe.h  NamedPipeServer.h  NetworkDevices.h  Noncopyable.h  Numeric.h  Object.h  (+37 more)
ff/include/ff/windows/: AdoCatalog.h  AdoCommand.h  AdoConnection.h  AdoField.h  AdoFields.h  AdoObject.h  AdoRecordSet.h  CrashDump.h  IOCP.h  NamedPipeServer.h  PeFile.h  Registry.h  Service.h  WsaHelper.h
ff/msvc/libff/: ReadMe.txt  libff.VC.VC.opendb  libff.cpp  libff.sln  libff.vcxproj  libff.vcxproj.filters  stdafx.cpp
ff/msvc/libff/Debug/: libff.exp  libff.lib  libffTeste.ilk  vc140.idb
ff/msvc/libff/Debug/libff.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libff.lastbuildstate  libff.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ff/msvc/libff/Release/: libff.exp  libff.ipdb  libff.lib  libffTeste.iobj  libffTeste.ipdb
ff/msvc/libff/Release/libff.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libff.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ff/msvc/libffTeste/: ReadMe.txt  libffTeste.cpp  libffTeste.vcxproj  libffTeste.vcxproj.filters  stdafx.cpp
ff/msvc/libffTeste/Debug/: vc140.idb
ff/msvc/libffTeste/Debug/libffTeste.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ff/msvc/libffTeste/Release/libffTeste.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libffTeste.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ff/src/: Common.cpp  Object.cpp  Utility.cpp
ff/src/app/: Application.cpp  ApplicationImpl.cpp  ApplicationImpl.h  CmdLineParser.cpp
ff/src/buffer/: Buffer.cpp  BufferImpl.cpp  BufferImpl.h  Payload.cpp
ff/src/cli/: CliPacket.cpp  CliService.cpp
ff/src/compress/: Unzip.cpp  Zip.cpp  ZipEntry.cpp
ff/src/container/: List.cpp
ff/src/data_service/: DataService.cpp
ff/src/datetime/: DateTime.cpp  Tick.cpp  Timestamp.cpp
ff/src/db/: Sqlite3DataBase.cpp
ff/src/dll/: DllLoader.cpp
ff/src/encrypt/: Base64.cpp  CRC.cpp  MD5.cpp  Rijndael.cpp
ff/src/endian/: Endian.cpp
ff/src/errno/: ErrNo.cpp
ff/src/exception/: Exception.cpp
ff/src/file/: File.cpp
ff/src/ipc/: NamedPipe.cpp  NamedPipeServer.cpp  SHM.cpp
ff/src/log/: FileAppender.cpp  Log.cpp  LogInfo.cpp  Logger.cpp  StdoutAppender.cpp
ff/src/message_bus/: MessageBus.cpp
ff/src/network/: Curl.cpp  EPoll.cpp  EPoll.h  IP.cpp  NetworkDevices.cpp  Socket.cpp  TcpClient.cpp  TcpConnection.cpp
ff/src/numeric/: HexNumberFormater.cpp  Numeric.cpp
ff/src/process/: FileLock.cpp  Process.cpp  ProcessImpl.h  ProcessImplLinux.cpp  ProcessImplLinux.h  ProcessImplWindows.cpp  ProcessImplWindows.h
ff/src/random/: Random.cpp  Snowflake.cpp  UUID.cpp
ff/src/rtp/: RtpError.cpp  RtpError.h  RtpPacket.cpp
ff/src/serial/: Serial.cpp
ff/src/settings/: Settings.cpp
ff/src/shm/: SHM.cpp
ff/src/string/: String.cpp  StringEncoding.cpp  StringWrapper.cpp
ff/src/system/: FileSystem.cpp  System.cpp
ff/src/thread/: Delayable.cpp  Runnable.cpp  Semaphore.cpp  Synchronizable.cpp  Thread.cpp  ThreadPool.cpp
ff/src/timer/: Timer.cpp  TimingWheel.cpp
ff/src/variant/: Variant.cpp
ff/src/windows/: AdoCommand.cpp  AdoField.cpp  AdoFields.cpp  CrashDump.cpp  IOCP.cpp  NamedPipeServer.cpp  PeFile.cpp  Registry.cpp  Service.cpp  WsaHelper.cpp
ff/src/windows/ado/: AdoCatalog.cpp  AdoCommand.cpp  AdoConnection.cpp  AdoField.cpp  AdoFields.cpp  AdoObject.cpp  AdoRecordSet.cpp
ff/test/: Application_test.cpp  Base64_test.cpp  BlockingList_test.cpp  Buffer_test.cpp  CRC_test.cpp  Cli_test.cpp  CmdLineParser_test.cpp  Compress_test.cpp  Curl_test.cpp  CycleBuffer_test.cpp  DataService_test.cpp  ErrNo_test.cpp  Exception_test.cpp  FileSystem_test.cpp  File_test.cpp  HexNumberFormater_test.cpp  List_test.cpp  Log_test.cpp  Logger_test.cpp  MessageBus_test.cpp  NamedPipe_test.cpp  NetworkDevices_test.cpp  Numeric_test.cpp  ObjectFactory_test.cpp  Process_test.cpp  Random_test.cpp  Registry_test.cpp  Runnable_test.cpp  SHM_test.cpp  ScopeGuard_test.cpp  Serial_test.cpp  Settings_test.cpp  Snowflake_test.cpp  Socket_test.cpp  StringWrapper_test.cpp  String_test.cpp  System_test.cpp  TcpClient_test.cpp  TcpConnection_test.cpp  TestDef.h  (+7 more)
ff/test/shm_test/: CMakeLists.txt  main.cpp
